--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                         <div class="search">
                             <form action="">
                                 <button type="submit" class="btn__search">
-                                    <img src="img/icon/coolicon.svg" alt="">
+                                    <img src="img/icon/coolicon.svg" class="search__img" alt="">
                                 </button>
-                                <input type="text" name="search" placeholder="Search">
+                                <input type="text" class="input__search" name="search" placeholder="Search">
                             </form>
                         </div>
                     </div>
