first page main

--- a/index.html
+++ b/index.html
@@ -24,17 +24,11 @@
                         <img src="img/Logo.png" alt="">
                     </div>
                     <nav class="header__menu menu">
-                        <div class="menu__icon icon-menu">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </div>
                         <div class="menu__body">
                             <ul class="menu__list">
-                                <li><a class="menu__link" href="">ABOUT US</a></li>
-                                <li><a class="menu__link" href="">WORK</a></li>
-                                <li><a class="menu__link" href="">SHOP</a></li>
-                                <li><a class="menu__link" href="">CONTACT</a></li>
+                                <li><a class="menu__link" href="">Information</a></li>
+                                <li><a class="menu__link" href="">About us</a></li>
+                                <li><a class="menu__link" href="">Culture</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -47,6 +41,29 @@
                                 <input type="text" class="input__search" name="search" placeholder="Search">
                             </form>
                         </div>
+                    </div>
+                </div>
+                <div class="header__media hmedia">
+                    <div class="hmdeia__body">
+                        <div class="hmdeia__text">Follow us</div>
+                        <a href="" class="hmdeia__social">
+                            <img src="img/icon/instagram.svg" alt="">
+                        </a>
+                        <a href="" class="hmdeia__social">
+                            <img src="img/icon/twitter.svg" alt="">
+                        </a>
+                        <a href="" class="hmdeia__social">
+                            <img src="img/icon/Facebook.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="header__main bigtext">
+                    <div class="bigtext__body">
+                        <div class="bigtext__subtitle">explore the Nature Beauty</div>
+                        <div class="bigtext__title">
+                            <span>Discover</span>Wonderful Indonesia
+                        </div>
+                        <div class="header__scroll">Scroll down</div>
                     </div>
                 </div>
             </header>
