first page is ready

--- a/index.html
+++ b/index.html
@@ -17,6 +17,29 @@
                 <div class="main-screen__bg ibg">
 					<img src="img/fullscreen1.png" alt="">
 				</div>
+                <div class="header__media hmedia">
+                    <div class="hmdeia__body">
+                        <div class="hmdeia__text">Follow us</div>
+                        <a href="" class="hmdeia__social">
+                            <img src="img/icon/instagram.svg" alt="">
+                        </a>
+                        <a href="" class="hmdeia__social">
+                            <img src="img/icon/twitter.svg" alt="">
+                        </a>
+                        <a href="" class="hmdeia__social">
+                            <img src="img/icon/Facebook.svg" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="header__main bigtext">
+                    <div class="bigtext__body">
+                        <h3 class="bigtext__subtitle subtitle">explore the Nature Beauty</h3>
+                        <h1 class="bigtext__title">
+                            <span>Discover</span>Wonderful Indonesia
+                        </h1>
+                        <div class="header__scroll">Scroll down</div>
+                    </div>
+                </div>
             </div>
             <header class="header">
                 <div class="header__row">
@@ -43,38 +66,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="header__media hmedia">
-                    <div class="hmdeia__body">
-                        <div class="hmdeia__text">Follow us</div>
-                        <a href="" class="hmdeia__social">
-                            <img src="img/icon/instagram.svg" alt="">
-                        </a>
-                        <a href="" class="hmdeia__social">
-                            <img src="img/icon/twitter.svg" alt="">
-                        </a>
-                        <a href="" class="hmdeia__social">
-                            <img src="img/icon/Facebook.svg" alt="">
-                        </a>
-                    </div>
-                </div>
-                <div class="header__main bigtext">
-                    <div class="bigtext__body">
-                        <div class="bigtext__subtitle">explore the Nature Beauty</div>
-                        <div class="bigtext__title">
-                            <span>Discover</span>Wonderful Indonesia
-                        </div>
-                        <div class="header__scroll">Scroll down</div>
-                    </div>
-                </div>
             </header>
-            
+
             <div class="content">
-                    <section class="generation">
+                    <section class="block__small block">
                         <div class="container">
-                            <div class="generation__block block">
-                                <div class="block__icon"><img src="../bicycle/img/icons/chain.png" alt=""></div>
-                                <h1 class="block__title">A NEW GENERATION OF VINTAGE BIKE</h1>
-                                <div class="block__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </div>
+                            <div class="block__body">
+                                <div class="block__img"><img src="img/image 1.png" alt=""></div>
+                                <h3 class="block__subbtitle subtitle">EAST NUSA TENGGARA</h3>
+                                <h2 class="block__title"></h2>Have you enjoyed your holiday?</h2>
+                                <div class="block__text">You will be amazed if you take part in this sailing Komodo island tour package. So it is also mandatory for you, besides enjoying Komodo tourism on Komodo Island, you also have to taste the marine tourism.  The beautiful waters of Komodo will make you meet many travelers from other countries.</div>
+                                <p class="read">read more</p>
                             </div>
                         </div>
                     </section>
