--- a/index.html
+++ b/index.html
@@ -71,93 +71,54 @@
             <div class="content">
                     <section class="block__small block">
                         <div class="container">
-                            <div class="block__body">
-                                <div class="block__img"><img src="img/image 1.png" alt=""></div>
-                                <h3 class="block__subbtitle subtitle">EAST NUSA TENGGARA</h3>
-                                <h2 class="block__title"></h2>Have you enjoyed your holiday?</h2>
-                                <div class="block__text">You will be amazed if you take part in this sailing Komodo island tour package. So it is also mandatory for you, besides enjoying Komodo tourism on Komodo Island, you also have to taste the marine tourism.  The beautiful waters of Komodo will make you meet many travelers from other countries.</div>
+                            <div class="block__row">
+                                <div class="block__column">
+                                    <div class="block__img ibg">
+                                        <img src="img/image 1.png" alt="">
+                                    </div>
+                                </div>
+                                <div class="block__column">
+                                    <div class="block__item">
+                                        <h3 class="block__subbtitle subtitle">EAST NUSA TENGGARA</h3>
+                                        <h2 class="block__title">Have you enjoyed your holiday?</h2>
+                                        <div class="block__text">You will be amazed if you take part in this sailing Komodo island tour package. So it is also mandatory for you, besides enjoying Komodo tourism on Komodo Island, you also have to taste the marine tourism.  The beautiful waters of Komodo will make you meet many travelers from other countries.</div>
+                                        <p class="read">read more</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="block__big big">
+                        <div class="container">
+                            <div class="big__img ibg">
+                                <img src="img/image 2.png" alt="">
+                                <h3 class="big__subbtitle subtitle">Bromo</h3>
+                                <h1 class="big__title">Steady your steps, we <span>will climb together!</span></h1>
+                                <div class="big__text">Enjoying the vast expanse of the sea of ​​​​sand, witnessing the splendor of Mount Semeru that soars into the sky, and gazing at the beauty of the sun moving out of its bed or otherwise enjoying the dim twilight from the Bromo ridge is an unforgettable experience when visiting Bromo.</div>
                                 <p class="read">read more</p>
                             </div>
                         </div>
                     </section>
-                    <section class="brands">
-                        <div class="brands__row">
-                            <div class="brands__column brands__column_b">
-                                <a class="brands__item item" href="">
-                                    <span class="item__logo">
-                                        <img src="img/icons/bicycle_company.png" alt="">
-                                    </span>
-                                    <span class="item__image ibg">
-                                        <img src="img/part of the steering wheel.png" alt="">
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="brands__column">
-                                <div class="brands__content block">
-                                    <div class="block__icon"><img src="../bicycle/img/icons/fish.png" alt=""></div>
-                                    <h2 class="block__title">vintage Oliva</h2>
-                                    <div class="block__text block__text_j">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</div>
+                    <section class="block__small block block_reverse">
+                        <div class="container">
+                            <div class="block__row">
+                                <div class="block__column">
+                                    <div class="block__img ibg">
+                                        <img src="img/3.png" alt="">
+                                    </div>
                                 </div>
-                                <div class="brands__image ibg"><img src="../bicycle/img/red_seat.png" alt=""></div>
+                                <div class="block__column">
+                                    <div class="block__item">
+                                        <h3 class="block__subbtitle subtitle">EAST NUSA TENGGARA</h3>
+                                        <h2 class="block__title">Have you enjoyed your holiday?</h2>
+                                        <div class="block__text">You will be amazed if you take part in this sailing Komodo island tour package. So it is also mandatory for you, besides enjoying Komodo tourism on Komodo Island, you also have to taste the marine tourism.  The beautiful waters of Komodo will make you meet many travelers from other countries.</div>
+                                        <p class="read">read more</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </section>
-                    <section class="brands brands__reverse">
-                        <div class="brands__row">
-                            <div class="brands__column brands__column_b">
-                                <a class="brands__item item" href="">
-                                    <span class="item__logo">
-                                        <img src="img/icons/vintage.png" alt="">
-                                    </span>
-                                    <span class="item__image ibg">
-                                        <img src="img/green bicycle with swans.png" alt="">
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="brands__column">
-                                <div class="brands__content block">
-                                    <div class="block__icon"><img src="img/icons/target.png" alt=""></div>
-                                    <h2 class="block__title">La Boriosa</h2>
-                                    <div class="block__text block__text_j">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</div>
-                                </div>
-                                <div class="brands__image ibg"><img src="img/brown_seat.png" alt=""></div>
-                            </div>
-                        </div>
-                    
-                    </section>
-                    <section class="brands brands__last">
-                        <div class="brands__row">
-                            <div class="brands__column brands__column_1">
-                                <a class="brands__item item" href="">
-                                    <span class="item__logo">
-                                        <img src="img/icons/bicycles since 1928.png" alt="">
-                                    </span>
-                                    <span class="item__image ibg">
-                                        <img src="img/bicycle red frame .png" alt="">
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="brands__column brands__column_2">
-                                <div class="brands__content block">
-                                    <div class="block__icon"><img src="img/icons/small icon part of the steering wheel of bicycle.png" alt=""></div>
-                                    <h2 class="block__title">RETRÒ BIKE - M. HULOT</h2>
-                                    <div class="block__text block__text_j">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived.</div>
-                                </div>
-                                <div class="brands__image ibg"><img src="img/bicycle tire.png" alt=""></div>
-                            </div>
-                            <div class="brands__column brands__column_3">
-                                <a class="brands__item item" href="">
-                                    <span class="item__logo">
-                                        <img src="img/icons/bicycles since 1928.png" alt="">
-                                    </span>
-                                    <span class="item__image ibg">
-                                        <img src="img/red bicycle.png" alt="">
-                                    </span>
-                                </a>
-                            </div>
-                        </div>
-                    </section>
-                    <section class="slider">
+                    <!-- <section class="slider">
                         <div class='container'>
                             <div class="slider__body">
                                 <div class="slider__item">
@@ -186,111 +147,7 @@
                             </div>
                         </div>
                     </section>
-                    <div class="shop">
-                        <div class="shop__body">
-                            <div class="shop__column shop__column_b">
-                                <div class="shop__block block-shop">
-                                    <div class="block-shop__row">
-                                        <div class="block-shop__column">
-                                            <a class="block-shop__item block-shop__item_l item" href="">
-                                                <span class="item__logo">
-                                                    <img src="img/icons/icon bicycle.png" alt="">
-                                                    <span>shop now</span>
-                                                </span>
-                                                <span class="item__image ibg">
-                                                    <img src="img/black leather seat.png" alt="">
-                                                </span>
-                                            </a>
-                                        </div>
-                                        <div class="block-shop__column">
-                                            <a class="block-shop__item block-shop__item_l item" href="">
-                                                <span class="item__logo">
-                                                    <img src="img/icons//icon bicycle.png" alt="">
-                                                    <span>shop now</span>
-                                                </span>
-                                                <span class="item__image ibg">
-                                                    <img src="img/a lot of seat of bicycles.png" alt="">
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <a class="block-shop__item item" href="">
-                                        <span class="item__logo">
-                                            <img src="img/icons//icon bicycle.png" alt="">
-                                            <span>shop now</span>
-                                        </span>
-                                        <span class="item__image ibg">
-                                            <img src="img/black leather seat.png" alt="">
-                                        </span>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="shop__column">
-                                <a class="block-shop__item block-shop__item_b item" href="">
-                                    <span class="item__logo">
-                                        <img src="img/icons/icon bicycle.png" alt="">
-                                        <span>shop now</span>
-                                    </span>
-                                    <span class="item__image ibg">
-                                        <img src="img/bag on the trunk.png" alt="">
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="shop__column">
-                                <a class="block-shop__item block-shop__item_b item" href="">
-                                    <span class="item__logo">
-                                        <img src="img/icons/icon bicycle.png" alt="">
-                                        <span>shop now</span>
-                                    </span>
-                                    <span class="item__image ibg">
-                                        <img src="img/left part of bicycle.png" alt="">
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="shop__column shop__column_b">
-                                <div class="shop__block block-shop">
-                                    <a class="block-shop__item item" href="">
-                                        <span class="item__logo">
-                                            <img src="img/icons//icon bicycle.png" alt="">
-                                            <span>shop now</span>
-                                        </span>
-                                        <span class="item__image ibg">
-                                            <img src="img/a lot of seat of bicycles.png" alt="">
-                                        </span>
-                                    </a>
-                                    <div class="block-shop__row">
-                                        <div class="block-shop__column">
-                                            <a class="block-shop__item block-shop__item_l item" href="">
-                                                <span class="item__logo">
-                                                    <img src="img/icons/icon bicycle.png" alt="">
-                                                    <span>shop now</span>
-                                                </span>
-                                                <span class="item__image ibg">
-                                                    <img src="img/brown leather seat.png" alt="">
-                                                </span>
-                                            </a>
-                                        </div>
-                                        <div class="block-shop__column">
-                                            <a class="block-shop__item block-shop__item_l item" href="">
-                                                <span class="item__logo">
-                                                    <img src="img/icons/icon bicycle.png" alt="">
-                                                    <span>shop now</span>
-                                                </span>
-                                                <span class="item__image ibg">
-                                                    <img src="img/bag.png" alt="">
-                                                </span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="black">
-                            <div class="black__discover">
-                                <a href="">DISCOVER THE SHOP</a>
-                            </div>
-                        </div>
-                    </div>
+                    
                     <section class="subscribe">
                         <div class="subscribe__body">
                             <div class="subscribe__logo"><img src="img/icons/Logo.png" alt=""></div>
@@ -305,10 +162,10 @@
 								</div>
 							</form>
                         </div>
-                    </section>
+                    </section> -->
             </div>
         </main>
-        <footer class="footer">
+        <!-- <footer class="footer">
             <div class="container">
                 <div class="footer__body">
                     <div class="footer__info">
@@ -327,7 +184,7 @@
                     </div>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="js/vendors.js"></script>
