--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="container">
                             <div class="block__row">
                                 <div class="block__column">
-                                    <div class="block__img ibg">
+                                    <div class="block__img ">
                                         <img src="img/image 1.png" alt="">
                                     </div>
                                 </div>
@@ -90,12 +90,14 @@
                     </section>
                     <section class="block__big big">
                         <div class="container">
-                            <div class="big__img ibg">
+                            <div class="big__img ">
                                 <img src="img/image 2.png" alt="">
-                                <h3 class="big__subbtitle subtitle">Bromo</h3>
-                                <h1 class="big__title">Steady your steps, we <span>will climb together!</span></h1>
-                                <div class="big__text">Enjoying the vast expanse of the sea of ​​​​sand, witnessing the splendor of Mount Semeru that soars into the sky, and gazing at the beauty of the sun moving out of its bed or otherwise enjoying the dim twilight from the Bromo ridge is an unforgettable experience when visiting Bromo.</div>
-                                <p class="read">read more</p>
+                                <div class="big__body">
+                                    <h3 class="big__subbtitle subtitle">Bromo</h3>
+                                    <h1 class="big__title">Steady your steps, we <span>will climb together!</span></h1>
+                                    <div class="big__text">Enjoying the vast expanse of the sea of ​​​​sand, witnessing the splendor of Mount Semeru that soars into the sky, and gazing at the beauty of the sun moving out of its bed or otherwise enjoying the dim twilight from the Bromo ridge is an unforgettable experience when visiting Bromo.</div>
+                                    <p class="read">read more</p>
+                                </div >
                             </div>
                         </div>
                     </section>
@@ -103,16 +105,16 @@
                         <div class="container">
                             <div class="block__row">
                                 <div class="block__column">
-                                    <div class="block__img ibg">
-                                        <img src="img/3.png" alt="">
-                                    </div>
-                                </div>
-                                <div class="block__column">
-                                    <div class="block__item">
+                                    <div class="block__item block__item_reverse">
                                         <h3 class="block__subbtitle subtitle">EAST NUSA TENGGARA</h3>
                                         <h2 class="block__title">Have you enjoyed your holiday?</h2>
                                         <div class="block__text">You will be amazed if you take part in this sailing Komodo island tour package. So it is also mandatory for you, besides enjoying Komodo tourism on Komodo Island, you also have to taste the marine tourism.  The beautiful waters of Komodo will make you meet many travelers from other countries.</div>
                                         <p class="read">read more</p>
+                                    </div>
+                                </div>
+                                <div class="block__column block__column_reverse">
+                                    <div class="block__img ">
+                                        <img src="img/3.png" alt="">
                                     </div>
                                 </div>
                             </div>
