ready withouth small things

--- a/index.html
+++ b/index.html
@@ -166,27 +166,87 @@
                         </div>
                     </section> -->
             </div>
-        </main>
-        <!-- <footer class="footer">
-            <div class="container">
+            <footer>
                 <div class="footer__body">
-                    <div class="footer__info">
-                        <div class="footer__company">AOD New York</div>
-                        <div class="footer__avenue">2250 Lexington Avenue</div>
-                        <div class="footer__adress-email">New York, NY 10035 - info@domain.com</div>
+                    <div class="footer__header fh">
+                        <div class="container">
+                            <div class="fh__row">
+                                <div class="footer__logo">QWERy</div>
+                                <div class="footer__form">
+                                    <div class="footer__question">Ready to explore?</div>
+                                    <button type="submit" class="footer__btn">Get started</button>
+                                </div>
+                            </div >
+                        </div >
                     </div>
-                    <div class="footer__social-network">
-                        <img class="twitter" src="../bicycle/img/icons/twitter.png" alt="">
-                        <img class="facebook" src="../bicycle/img/icons/facebook.png" alt="">
-                        <img class="pinterest"  src="../bicycle/img/icons/pinterest.png" alt="">
+                    <div class="footer__main f-main">
+                        <div class="container">
+                            <div class="f-main__row">
+                                <div class="f-main__form">
+                                    <h3 class="f-main__text">
+                                        Let's go on vacation,<span>Make your day</span>
+                                    </h3>
+                                    <form action="#" class="f-main__mail">
+                                        <input autocomplete="off" type="text" name="form[]" data-value="Email adress" class="input req email">
+                                        <button type="submit" class="footer__btn"><img src="img/icon/Path.svg" alt=""></button>
+                                    </form>
+                                </div>
+                                <nav class="f-main__body">
+                                    <div class="f-main__services services">
+                                        <div class="services__row">
+                                            <a href="#" class="main-link">Services</a>
+                                            <a href="#" class="link">Email Marketing</a>
+                                            <a href="#" class="link">Campaigns</a>
+                                            <a href="#" class="link">Branding</a>
+                                            <a href="#" class="link">Offline</a>
+                                        </div >
+                                    </div>
+                                    <div class="f-main__about about">
+                                        <div class="about__row">
+                                            <a href="#" class="main-link">About</a>
+                                            <a href="#" class="link">Our Story</a>
+                                            <a href="#" class="link">Benefits</a>
+                                            <a href="#" class="link">Team</a>
+                                            <a href="#" class="link">Careers</a>
+                                        </div >
+                                    </div>
+                                    <div class="f-main__help help">
+                                        <div class="help__row">
+                                            <a href="#" class="main-link">Help</a>
+                                            <a href="#" class="link">FAQs</a>
+                                            <a href="#" class="link">Contact Us</a>
+                                        </div >
+                                    </div>
+                                </nav>
+                            </div >
+                        </div >
                     </div>
-                    <div class="footer__logo">
-                        <span>Handcrafted by </span>
-                        <img src="../bicycle/img/icons/Y_E_B_O_Logo.png" alt="">
+                    <div class="footer__footer ff">
+                        <div class="container">
+                            <div class="ff__header">
+                                <div class="ff__info">
+                                    <a href="" class="info">Terms & Conditions</a>
+                                    <a href="" class="info">Privacy Policy</a>
+                                </div>
+                                <div class="ff__socialnetworks">
+                                    <a href="" class="ff__social">
+                                        <img src="img/icon/Facebook.svg" alt="">
+                                    </a>
+                                    <a href="" class="ff__social">
+                                        <img src="img/icon/twitter.svg" alt="">
+                                    </a>
+                                    <a href="" class="ff__social">
+                                        <img src="img/icon/instagram.svg" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="ff__footer">Copyright 2021 QWERy</div>
+                        </div >
                     </div>
-                </div>
-            </div>
-        </footer> -->
+                </div >
+            </footer>
+        </main>
+        
     </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script src="js/vendors.js"></script>
